Add button implementation

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
 	<div class="container">
-		<div id="buttons"></div>
+		<div id="buttons">
+			<div id="play-rock">Kamień</div>
+			<div id="play-paper">Papier</div>
+			<div id="play-scissors">Nożyce</div>
+		</div>
 		<div id="messages"></div>
 	</div>
 	<script src="js/functions.js"></script>
